--- a/sample/index.html
+++ b/sample/index.html
@@ -121,7 +121,7 @@
 						'htmlEmbed',
 						'code',
 						'codeBlock',
-						'imageUpload',
+						'imageInsert',
 						'blockQuote',
 						'insertTable',
 						'mediaEmbed',
